@@ -54,6 +54,22 @@ namespace ns3 {
  * The multipath channel is simulated using the TDL_channel class of
  * the IT++ library.
  *
+ *
+ * The file format should be as follows
+ *
+ * SNR_value1   BER  Blc_ER  STANDARD_DEVIATION  CONFIDENCE_INTERVAL1  CONFIDENCE_INTERVAL2
+ * SNR_value2   BER  Blc_ER  STANDARD_DEVIATION  CONFIDENCE_INTERVAL1  CONFIDENCE_INTERVAL2
+ *  ...          ...  ...     ...                 ...                   ...
+ *
+ *
+ *  Aditional notes: from Esteban Municio   <esteban.municio@urjc.es>
+ *
+ *  This trace file has been edited for the 16 QAM 3/4 modulation (modulation4) since the original SNR traces for
+ *  this modulation were not long enough, giving inflated BER and BLER figures for typical SNR values. Due to the impossibility
+ *  to get the original IT++ environment used for the original traces by the previous authors, the traces of modulation4 have
+ *  been generated using a simple IT++ program simulating the theoretical model of a AWGN channel
+ *  given BER=3/2*erfc(sqrt(k*0.1*(Eb_N0_dB)));
+ *
  * \relates ns3::SNRToBlockErrorRateManager
  * \hideinitializer
  * @{
@@ -254,66 +270,187 @@ static const double modulation3[6][117] = {
     0.00000, 0.00030, 0.00048, 0.00079, 0.00048, 0.00030, 0.00030, 0.00079, 0.00000 }
 };
 
-static const double modulation4[6][115] = {
+static const double modulation4[6][331] = {
 
-  { 20.00, 20.10, 20.20, 20.30, 20.40, 20.50, 20.60, 20.70, 20.80, 20.90, 21.00, 21.10, 21.20, 21.30, 21.40, 21.50,
-    21.60, 21.70, 21.80, 21.90, 22.00, 22.10, 22.20, 22.30, 22.40, 22.50, 22.60, 22.70, 22.80, 22.90, 23.00, 23.10,
-    23.20, 23.30, 23.40, 23.50, 23.60, 23.70, 23.80, 23.90, 24.00, 24.10, 24.20, 24.30, 24.40, 24.50, 24.60, 24.70,
-    24.80, 24.90, 25.00, 25.10, 25.20, 25.30, 25.40, 25.50, 25.60, 25.70, 25.80, 25.90, 26.00, 26.10, 26.20, 26.30,
-    26.40, 26.50, 26.60, 26.70, 26.80, 26.90, 27.10, 27.20, 27.30, 27.40, 27.50, 27.60, 27.70, 27.80, 27.90, 28.00,
-    28.10, 28.20, 28.30, 28.40, 28.50, 28.60, 28.70, 28.80, 28.90, 29.00, 29.10, 29.20, 29.30, 29.40, 29.50, 29.60,
-    29.70, 29.80, 29.90, 30.00, 30.10, 30.20, 30.30, 30.40, 30.50, 30.60, 30.70, 30.80, 30.90, 31.00, 31.10, 31.20,
-    31.30, 31.40, 31.50 },
+  {20,20.1,20.2,20.3,20.4,20.5,20.6,20.7,20.8,20.9,21,21.1,21.2,21.3,21.4,21.5,21.6,21.7,
+   21.8,21.9,22,22.1,22.2,22.3,22.4,22.5,22.6,22.7,22.8,22.9,23,23.1,23.2,23.3,23.4,23.5,
+   23.6,23.7,23.8,23.9,24,24.1,24.2,24.3,24.4,24.5,24.6,24.7,24.8,24.9,25,25.1,25.2,25.3,
+   25.4,25.5,25.6,25.7,25.8,25.9,26,26.1,26.2,26.3,26.4,26.5,26.6,26.7,26.8,26.9,27,27.1,
+   27.2,27.3,27.4,27.5,27.6,27.7,27.8,27.9,28,28.1,28.2,28.3,28.4,28.5,28.6,28.7,28.8,28.9,
+   29,29.1,29.2,29.3,29.4,29.5,29.6,29.7,29.8,29.9,30,30.1,30.2,30.3,30.4,30.5,30.6,30.7,
+   30.8,30.9,31,31.1,31.2,31.3,31.4,31.5,31.6,31.7,31.8,31.9,32,32.1,32.2,32.3,32.4,32.5,
+   32.6,32.7,32.8,32.9,33,33.1,33.2,33.3,33.4,33.5,33.6,33.7,33.8,33.9,34,34.1,34.2,34.3,
+   34.4,34.5,34.6,34.7,34.8,34.9,35,35.1,35.2,35.3,35.4,35.5,35.6,35.7,35.8,35.9,36,36.1,
+   36.2,36.3,36.4,36.5,36.6,36.7,36.8,36.9,37,37.1,37.2,37.3,37.4,37.5,37.6,37.7,37.8,37.9,
+   38,38.1,38.2,38.3,38.4,38.5,38.6,38.7,38.8,38.9,39,39.1,39.2,39.3,39.4,39.5,39.6,39.7,
+   39.8,39.9,40,40.1,40.2,40.3,40.4,40.5,40.6,40.7,40.8,40.9,41,41.1,41.2,41.3,41.4,41.5,
+   41.6,41.7,41.8,41.9,42,42.1,42.2,42.3,42.4,42.5,42.6,42.7,42.8,42.9,43,43.1,43.2,43.3,
+   43.4,43.5,43.6,43.7,43.8,43.9,44,44.1,44.2,44.3,44.4,44.5,44.6,44.7,44.8,44.9,45,45.1,
+   45.2,45.3,45.4,45.5,45.6,45.7,45.8,45.9,46,46.1,46.2,46.3,46.4,46.5,46.6,46.7,46.8,46.9,
+   47,47.1,47.2,47.3,47.4,47.5,47.6,47.7,47.8,47.9,48,48.1,48.2,48.3,48.4,48.5,48.6,48.7,
+   48.8,48.9,49,49.1,49.2,49.3,49.4,49.5,49.6,49.7,49.8,49.9,50,50.1,50.2,50.3,50.4,50.5,
+   50.6,50.7,50.8,50.9,51,51.1,51.2,51.3,51.4,51.5,51.6,51.7,51.8,51.9,52,52.1,52.2,52.3,
+   52.4,52.5,52.6,52.7,52.8,52.9,53},
 
-  { 0.33107, 0.32310, 0.31789, 0.31805, 0.31352, 0.30854, 0.30697, 0.29615, 0.29218, 0.28319, 0.27982, 0.27112, 0.27369,
-    0.26701, 0.26180, 0.25450, 0.25144, 0.24541, 0.23739, 0.23148, 0.23259, 0.23020, 0.22530, 0.21333, 0.20806, 0.20799,
-    0.19834, 0.19916, 0.19431, 0.18956, 0.18273, 0.18543, 0.17783, 0.17627, 0.17182, 0.16563, 0.15979, 0.15714, 0.15541,
-    0.15025, 0.14868, 0.14430, 0.13602, 0.13636, 0.13467, 0.12758, 0.12542, 0.12828, 0.12015, 0.11889, 0.11511, 0.10993,
-    0.10791, 0.10339, 0.10542, 0.10187, 0.09945, 0.09516, 0.08852, 0.09033, 0.09222, 0.08730, 0.08405, 0.08084, 0.08054,
-    0.07719, 0.07267, 0.06947, 0.07170, 0.06786, 0.06610, 0.06346, 0.05817, 0.06174, 0.06139, 0.05859, 0.05682, 0.05319,
-    0.05322, 0.05096, 0.05004, 0.04921, 0.04771, 0.04506, 0.04220, 0.04323, 0.04337, 0.04082, 0.04035, 0.03932, 0.03570,
-    0.03526, 0.03798, 0.03680, 0.03391, 0.03413, 0.03184, 0.02968, 0.02886, 0.02931, 0.02955, 0.02795, 0.02603, 0.02478,
-    0.02541, 0.02669, 0.02407, 0.02403, 0.02353, 0.02260, 0.02004, 0.02105, 0.02135, 0.01855, 0.02085 },
+  {0.473383,0.465027,0.456673,0.448325,0.439984,0.431653,0.423335,0.415032,0.406746,0.398480,0.390237,
+  0.382020,0.373830,0.365672,0.357547,0.349458,0.341409,0.333402,0.325439,0.317525,0.309662,0.301852,
+  0.294099,0.286406,0.278776,0.271211,0.263714,0.256290,0.248939,0.241667,0.234474,0.227364,0.220341,
+  0.213406,0.206562,0.199813,0.193161,0.186608,0.180156,0.173809,0.167569,0.161438,0.155418,0.149511,
+  0.143719,0.138045,0.132489,0.127053,0.121740,0.116550,0.111485,0.106546,0.101733,0.097049,0.092492,
+  0.088064,0.083766,0.079597,0.075558,0.071648,0.067867,0.064215,0.060691,0.057295,0.054025,0.050880,
+  0.047860,0.044962,0.042185,0.039528,0.036989,0.034565,0.032255,0.030056,0.027965,0.025981,0.024101,
+  0.022322,0.020641,0.019055,0.017561,0.016157,0.014839,0.013604,0.012449,0.011371,0.010366,0.009431,
+  0.008563,0.007760,0.007017,0.006331,0.005700,0.005120,0.004589,0.004103,0.003660,0.003256,0.002890,
+  0.002558,0.002259,0.001989,0.001747,0.001529,0.001335,0.001162,0.001009,0.000873,0.000753,0.000647,
+  0.000555,0.000474,0.000403,0.000342,0.000289,0.000243,0.000204,0.000170,0.000142,0.000117,0.000097,
+  0.000080,0.000065,0.000053,0.000043,0.000035,0.000028,0.000022,0.000018,0.000014,0.000011,0.000009,
+  0.000007,0.000005,0.000004,0.000003,0.000002,0.000002,0.000001,0.000001,0.000001,0.000001,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000},
 
-  { 0.68910, 0.67470, 0.66370, 0.66340, 0.65400, 0.64460, 0.64120, 0.61740, 0.61020, 0.59290, 0.58240, 0.56690, 0.57110,
-    0.55810, 0.54650, 0.53130, 0.52610, 0.51200, 0.49810, 0.48530, 0.48690, 0.48150, 0.47100, 0.44610, 0.43360, 0.43630,
-    0.41640, 0.41670, 0.40760, 0.39680, 0.38090, 0.38680, 0.37150, 0.36880, 0.36050, 0.34570, 0.33380, 0.32750, 0.32550,
-    0.31570, 0.31170, 0.30200, 0.28510, 0.28540, 0.28240, 0.26730, 0.26210, 0.26730, 0.25150, 0.24950, 0.24100, 0.23150,
-    0.22630, 0.21650, 0.22150, 0.21430, 0.20760, 0.19990, 0.18610, 0.18940, 0.19290, 0.18350, 0.17690, 0.16830, 0.17030,
-    0.16210, 0.15310, 0.14570, 0.14960, 0.14150, 0.13860, 0.13350, 0.12300, 0.12880, 0.12900, 0.12350, 0.11900, 0.11280,
-    0.11120, 0.10710, 0.10500, 0.10350, 0.10030, 0.09460, 0.08850, 0.09070, 0.09010, 0.08600, 0.08490, 0.08210, 0.07550,
-    0.07440, 0.07960, 0.07740, 0.07190, 0.07100, 0.06770, 0.06190, 0.06050, 0.06170, 0.06200, 0.05870, 0.05490, 0.05240,
-    0.05300, 0.05540, 0.05070, 0.05070, 0.04940, 0.04670, 0.04440, 0.04240, 0.04300, 0.04100, 0.04200 },
+  {0.899428,0.883551,0.867679,0.851817,0.835970,0.820141,0.804337,0.788561,0.772818,0.757113,0.741451,
+  0.725838,0.710278,0.694776,0.679339,0.663970,0.648677,0.633463,0.618335,0.603298,0.588357,0.573519,
+  0.558789,0.544172,0.529674,0.515300,0.501058,0.486950,0.472985,0.459166,0.445500,0.431992,0.418647,
+  0.405471,0.392468,0.379645,0.367005,0.354554,0.342297,0.330238,0.318382,0.306732,0.295294,0.284071,
+  0.273066,0.262285,0.251729,0.241402,0.231306,0.221446,0.211822,0.202437,0.193293,0.184392,0.175735,
+  0.167322,0.159155,0.151234,0.143559,0.136131,0.128947,0.122008,0.115313,0.108860,0.102647,0.096672,
+  0.090933,0.085428,0.080152,0.075104,0.070279,0.065674,0.061284,0.057106,0.053134,0.049364,0.045792,
+  0.042411,0.039217,0.036204,0.033367,0.030699,0.028194,0.025848,0.023653,0.021604,0.019695,0.017919,
+  0.016271,0.014743,0.013332,0.012029,0.010830,0.009728,0.008719,0.007796,0.006953,0.006187,0.005491,
+  0.004861,0.004292,0.003779,0.003318,0.002906,0.002537,0.002209,0.001917,0.001659,0.001430,0.001230,
+  0.001054,0.000900,0.000766,0.000649,0.000549,0.000462,0.000387,0.000324,0.000269,0.000223,0.000184,
+  0.000151,0.000124,0.000101,0.000082,0.000066,0.000053,0.000042,0.000034,0.000027,0.000021,0.000016,
+  0.000013,0.000010,0.000008,0.000006,0.000004,0.000003,0.000003,0.000002,0.000001,0.000001,0.000001,
+  0.000001,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000},
 
-  { 0.21424, 0.21948, 0.22320, 0.22330, 0.22628, 0.22909, 0.23006, 0.23622, 0.23786, 0.24137, 0.24321, 0.24552, 0.24494,
-    0.24662, 0.24784, 0.24902, 0.24932, 0.24986, 0.25000, 0.24978, 0.24983, 0.24966, 0.24916, 0.24710, 0.24559, 0.24594,
-    0.24301, 0.24306, 0.24146, 0.23935, 0.23581, 0.23719, 0.23349, 0.23279, 0.23054, 0.22619, 0.22238, 0.22024, 0.21955,
-    0.21603, 0.21454, 0.21080, 0.20382, 0.20395, 0.20265, 0.19585, 0.19340, 0.19585, 0.18825, 0.18725, 0.18292, 0.17791,
-    0.17509, 0.16963, 0.17244, 0.16838, 0.16450, 0.15994, 0.15147, 0.15353, 0.15569, 0.14983, 0.14561, 0.13997, 0.14130,
-    0.13582, 0.12966, 0.12447, 0.12722, 0.12148, 0.11939, 0.11568, 0.10787, 0.11221, 0.11236, 0.10825, 0.10484, 0.10008,
-    0.09884, 0.09563, 0.09398, 0.09279, 0.09024, 0.08565, 0.08067, 0.08247, 0.08198, 0.07860, 0.07769, 0.07536, 0.06980,
-    0.06886, 0.07326, 0.07141, 0.06673, 0.06596, 0.06312, 0.05807, 0.05684, 0.05789, 0.05816, 0.05525, 0.05189, 0.04965,
-    0.05019, 0.05233, 0.04813, 0.04813, 0.04696, 0.04452, 0.04060, 0.04243, 0.04115, 0.03932, 0.04024 },
+  {0.163210,0.176020,0.187600,0.194680,0.203900,0.213060,0.224650,0.229210,0.234400,0.242200,0.245430,
+  0.248200,0.249480,0.249980,0.249410,0.247290,0.245040,0.242130,0.237250,0.230790,0.224780,0.217600,
+  0.209440,0.198020,0.192010,0.188000,0.177640,0.167520,0.158250,0.152220,0.143330,0.129380,0.125460,
+  0.114500,0.113030,0.100460,0.097670,0.091910,0.085250,0.079510,0.073260,0.063030,0.063890,0.054640,
+  0.053480,0.046690,0.046600,0.041060,0.035260,0.029190,0.029290,0.026180,0.023140,0.022570,0.022380,
+  0.018160,0.018540,0.013030,0.014970,0.012340,0.012250,0.009800,0.009900,0.007340,0.009020,0.009610,
+  0.004680,0.005960,0.005170,0.005370,0.003690,0.003880,0.003690,0.002490,0.003190,0.003090,0.003090,
+  0.001900,0.001900,0.001300,0.001300,0.001200,0.001400,0.000700,0.000700,0.001100,0.000800,0.000200,
+  0.000500,0.001000,0.000600,0.000700,0.000300,0.000700,0.000600,0.000700,0.000100,0.000400,0.000400,
+  0.000300,0.000200,0.000200,0.000200,0.000200,0.000200,0.000400,0.000000,0.000100,0.000000,0.000100,
+  0.000200,0.000400,0.000200,0.000100,0.000100,0.000400,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000},
 
-  { 0.68003, 0.66552, 0.65444, 0.65414, 0.64468, 0.63522, 0.63180, 0.60787, 0.60064, 0.58327, 0.57273, 0.55719, 0.56140,
-    0.54837, 0.53674, 0.52152, 0.51631, 0.50220, 0.48830, 0.47550, 0.47710, 0.47171, 0.46122, 0.43636, 0.42389, 0.42658,
-    0.40674, 0.40704, 0.39797, 0.38721, 0.37138, 0.37725, 0.36203, 0.35934, 0.35109, 0.33638, 0.32456, 0.31830, 0.31632,
-    0.30659, 0.30262, 0.29300, 0.27625, 0.27655, 0.27358, 0.25863, 0.25348, 0.25863, 0.24300, 0.24102, 0.23262, 0.22323,
-    0.21810, 0.20843, 0.21336, 0.20626, 0.19965, 0.19206, 0.17847, 0.18172, 0.18517, 0.17591, 0.16942, 0.16097, 0.16293,
-    0.15488, 0.14604, 0.13878, 0.14261, 0.13467, 0.13183, 0.12683, 0.11656, 0.12223, 0.12243, 0.11705, 0.11265, 0.10660,
-    0.10504, 0.10104, 0.09899, 0.09753, 0.09441, 0.08886, 0.08293, 0.08507, 0.08449, 0.08050, 0.07944, 0.07672, 0.07032,
-    0.06926, 0.07429, 0.07216, 0.06684, 0.06597, 0.06278, 0.05718, 0.05583, 0.05698, 0.05727, 0.05409, 0.05044, 0.04803,
-    0.04861, 0.05092, 0.04640, 0.04640, 0.04515, 0.04256, 0.03845, 0.04036, 0.03043, 0.02871, 0.02957 },
+  {0.890434,0.874715,0.859002,0.843299,0.827610,0.811940,0.796293,0.780675,0.765089,0.749542,0.734037,
+  0.718579,0.703175,0.687828,0.672545,0.657331,0.642190,0.627128,0.612151,0.597265,0.582474,0.567784,
+  0.553201,0.538730,0.524377,0.510147,0.496047,0.482081,0.468255,0.454575,0.441045,0.427672,0.414461,
+  0.401416,0.388544,0.375848,0.363335,0.351009,0.338874,0.326936,0.315198,0.303665,0.292341,0.281230,
+  0.270336,0.259662,0.249211,0.238988,0.228993,0.219231,0.209704,0.200413,0.191361,0.182548,0.173977,
+  0.165649,0.157564,0.149722,0.142124,0.134769,0.127658,0.120788,0.114160,0.107771,0.101620,0.095705,
+  0.090024,0.084573,0.079351,0.074353,0.069576,0.065017,0.060671,0.056535,0.052603,0.048871,0.045334,
+  0.041987,0.038825,0.035842,0.033033,0.030392,0.027912,0.025589,0.023417,0.021388,0.019498,0.017740,
+  0.016108,0.014596,0.013198,0.011909,0.010722,0.009631,0.008632,0.007718,0.006884,0.006125,0.005436,
+  0.004812,0.004249,0.003741,0.003285,0.002877,0.002512,0.002187,0.001898,0.001642,0.001416,0.001218,
+  0.001043,0.000891,0.000758,0.000643,0.000543,0.000457,0.000384,0.000320,0.000267,0.000221,0.000182,
+  0.000150,0.000123,0.000100,0.000081,0.000065,0.000052,0.000042,0.000033,0.000026,0.000021,0.000016,
+  0.000013,0.000010,0.000008,0.000006,0.000004,0.000003,0.000003,0.000002,0.000001,0.000001,0.000001,
+  0.000001,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000},
 
-  { 0.69817, 0.68388, 0.67296, 0.67266, 0.66332, 0.65398, 0.65060, 0.62693, 0.61976, 0.60253, 0.59207, 0.57661, 0.58080,
-    0.56783, 0.55626, 0.54108, 0.53589, 0.52180, 0.50790, 0.49510, 0.49670, 0.49129, 0.48078, 0.45584, 0.44331, 0.44602,
-    0.42606, 0.42636, 0.41723, 0.40639, 0.39042, 0.39635, 0.38097, 0.37826, 0.36991, 0.35502, 0.34304, 0.33670, 0.33468,
-    0.32481, 0.32078, 0.31100, 0.29395, 0.29425, 0.29122, 0.27597, 0.27072, 0.27597, 0.26000, 0.25798, 0.24938, 0.23977,
-    0.23450, 0.22457, 0.22964, 0.22234, 0.21555, 0.20774, 0.19373, 0.19708, 0.20063, 0.19109, 0.18438, 0.17563, 0.17767,
-    0.16932, 0.16016, 0.15262, 0.15659, 0.14833, 0.14537, 0.14017, 0.12944, 0.13537, 0.13557, 0.12995, 0.12535, 0.11900,
-    0.11736, 0.11316, 0.11101, 0.10947, 0.10619, 0.10034, 0.09407, 0.09633, 0.09571, 0.09150, 0.09036, 0.08748, 0.08068,
-    0.07954, 0.08490, 0.08264, 0.07696, 0.07603, 0.07262, 0.06662, 0.06517, 0.06642, 0.06673, 0.06331, 0.05937, 0.05677,
-    0.05739, 0.05988, 0.05500, 0.05500, 0.05365, 0.05084, 0.04635, 0.04844, 0.05557, 0.05329, 0.05443 },
+  {0.908423,0.892386,0.876356,0.860335,0.844330,0.828343,0.812380,0.796446,0.780546,0.764684,0.748866,
+  0.733096,0.717380,0.701724,0.686132,0.670610,0.655163,0.639798,0.624518,0.609331,0.594241,0.579254,
+  0.564377,0.549613,0.534970,0.520453,0.506068,0.491820,0.477715,0.463758,0.449955,0.436312,0.422834,
+  0.409526,0.396393,0.383441,0.370675,0.358100,0.345720,0.333540,0.321565,0.309799,0.298247,0.286911,
+  0.275797,0.264907,0.254246,0.243816,0.233619,0.223660,0.213940,0.204462,0.195226,0.186236,0.177492,
+  0.168995,0.160747,0.152747,0.144995,0.137492,0.130237,0.123228,0.116466,0.109948,0.103673,0.097639,
+  0.091843,0.086282,0.080954,0.075855,0.070982,0.066330,0.061897,0.057677,0.053665,0.049858,0.046250,
+  0.042835,0.039609,0.036566,0.033700,0.031006,0.028476,0.026106,0.023890,0.021820,0.019892,0.018098,
+  0.016433,0.014891,0.013465,0.012149,0.010938,0.009826,0.008806,0.007873,0.007023,0.006249,0.005546,
+  0.004910,0.004335,0.003817,0.003352,0.002935,0.002562,0.002231,0.001936,0.001675,0.001445,0.001242,
+  0.001064,0.000909,0.000774,0.000656,0.000554,0.000467,0.000391,0.000327,0.000272,0.000225,0.000186,
+  0.000153,0.000125,0.000102,0.000083,0.000067,0.000054,0.000043,0.000034,0.000027,0.000021,0.000017,
+  0.000013,0.000010,0.000008,0.000006,0.000004,0.000003,0.000003,0.000002,0.000001,0.000001,0.000001,
+  0.000001,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,0.000000,
+  0.000000}
 };
 
 static const double modulation5[6][547] = {
